# agentpay

./: .gitignore  docker-compose.yml  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
agents/: travel_agent_demo.py
api/: .env.example  Dockerfile  README.md  auth.py  backup.py  database.py  entrypoint.py  guardrails.py  main.py  models.py  requirements.txt  validators.py  x402_middleware.py
api/.next/: trace  trace-build
contracts/: foundry.toml
contracts/src/: AgentWallet.sol
contracts/src/mocks/: MockERC20.sol
contracts/test/: AgentWallet.t.sol
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: Navigation.tsx  SendPaymentModal.tsx
frontend/app/dashboard/: page.tsx
frontend/app/demo/: page.tsx
frontend/app/docs/: page.tsx
frontend/app/get-started/: page.tsx
frontend/app/privacy/: page.tsx
frontend/app/roadmap/: page.tsx
frontend/app/terms/: page.tsx
integrations/langchain/: README.md  agentpay_tool.py  demo.py
integrations/langchain-pkg/: README.md  pyproject.toml
integrations/langchain-pkg/agentpay_langchain/: __init__.py  tool.py
integrations/langchain-pkg/agentpay_langchain.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/: README.md  package-lock.json  package.json
sdk/src/: index.ts  types.ts
test/: AgentWallet.test.ts
