[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agentpay-langchain"
version = "0.1.0"
description = "LangChain tool for autonomous USDC payments via AgentPay"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Gerry Go", email = "hello@agentpay.xyz" }]
keywords = ["langchain", "ai", "payments", "usdc", "stablecoin", "agents", "web3"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests>=2.28",
    "pydantic>=2.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1"]
async = ["aiohttp>=3.8"]
all = ["langchain-core>=0.1", "aiohttp>=3.8"]

[project.urls]
Homepage = "https://frontend-gilt-xi-owvghr36pe.vercel.app"
Repository = "https://github.com/agentpay-hq/agentpay"
Documentation = "https://frontend-gilt-xi-owvghr36pe.vercel.app/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentpay_langchain*"]
